...
        />
        <HeadText
          text="My"
          side="left"
          image={require("../assets/images/3.jpg")}
        />
        <HeadText text="HealTime" />
        <HeadText side="right" image={require("../assets/images/4.jpg")} />
      </View>
      <Animated.View
        entering={FadeIn.delay(3000).springify().damping(18).stiffness(50)}
        style={[styles.buttonContainer, animatedStyle]}
      >
...
            router.push("/(tabs)");
            scale.value = withSpring(1, { damping: 10, stiffness: 100 });

          }}
        >
          <Animated.View style={styles.button}>
            <Text style={styles.buttonText}>Get Started Be Healthy</Text>
          </Animated.View>
        </TouchableWithoutFeedback>
      </Animated.View>
    </View>
  );
}
...
