...
          router.push("/(tabs)");
          scale.value = withSpring(1, { damping: 10, stiffness: 100 });

        }}
      >
        <Animated.View style={styles.button}>
          <Text style={styles.buttonText}>Get Started Be Healthy</Text>
        </Animated.View>
      </TouchableWithoutFeedback>
    </Animated.View>
       
     
    </View>
...
